# when-drift-breaks

./: .gitignore  LICENSE  README.md  main_v16 (1).tex  pyproject.toml  references (1).bib  requirements.txt  teiresias_canonical.py
data/: PROVENANCE.md
data/features/: features_shape.parquet  features_skew.parquet  features_spectral.parquet
data/seed_results/: 20260505_1334_FINAL_10seed_paper1.json  20260505_1334_shape_seeds.parquet  20260505_1334_skew_seeds.parquet  20260505_1334_spectral_seeds.parquet
data/snapshot_mai/features/: features_D4.parquet
data/snapshot_mai/models/: karte_D4.pkl  viterbi_anchor.pkl
data/snapshot_mai/pf_results/: pf_D4.parquet
data/yahoo/: SKEW.parquet  SPY.parquet  XLB.parquet  XLE.parquet  XLF.parquet  XLI.parquet  XLK.parquet  XLP.parquet  XLU.parquet  XLV.parquet  XLY.parquet
notebooks/: 00_reproduce_results.ipynb
reproduce/: generate_master_labels.py  reproduce_main_results.py  reproduce_paper_figures.ipynb
teiresias/: __init__.py  clustering.py  data.py  evaluation.py  features.py  loss_dynamics.py  observation.py  particle_filter.py  persistence.py  regimes.py  spectral.py  transitions.py
