[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teiresias"
version = "1.0.0"
description = "Particle-based regime inference for crash detection in financial time series"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lutz Plümer", email = "pluemer@uni-bonn.de"},
]
keywords = [
    "particle filter",
    "regime detection",
    "distributional shape",
    "financial crash detection",
    "probabilistic robotics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
test = ["pytest>=7.0"]
dev = [
    "pytest>=7.0",
    "yfinance>=0.2",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/lutzpluemer/teiresias-paper1"
Repository = "https://github.com/lutzpluemer/teiresias-paper1"
Issues = "https://github.com/lutzpluemer/teiresias-paper1/issues"

[tool.setuptools.packages.find]
include = ["teiresias*"]
exclude = ["notebooks*", "tests*", "reproduce*", "data*", "docs*"]

[tool.setuptools.package-data]
teiresias = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
